Rename files to .hpp, .cpp

--- a/src/mlpack/methods/hmm/CMakeLists.txt
+++ b/src/mlpack/methods/hmm/CMakeLists.txt
@@ -3,16 +3,16 @@ cmake_minimum_required(VERSION 2.8)
 # Define the files we need to compile.
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
-  discreteHMM.h
-  discreteHMM.cc
-  gaussianHMM.h
-  gaussianHMM.cc
-  mixgaussHMM.h
-  mixgaussHMM.cc
-  mixtureDST.h
-  mixtureDST.cc
-  support.h
-  support.cc
+  discreteHMM.hpp
+  discreteHMM.cpp
+  gaussianHMM.hpp
+  gaussianHMM.cpp
+  mixgaussHMM.hpp
+  mixgaussHMM.cpp
+  mixtureDST.hpp
+  mixtureDST.cpp
+  support.hpp
+  support.cpp
 )
 
 # Add directory name to sources.
@@ -26,28 +26,28 @@ set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 # executables
 add_executable(generate
-  generate.cc
+  generate.cpp
 )
 target_link_libraries(generate
   mlpack
 )
 
 add_executable(loglik
-  loglik.cc
+  loglik.cpp
 )
 target_link_libraries(loglik
   mlpack
 )
 
 add_executable(viterbi
-  viterbi.cc
+  viterbi.cpp
 )
 target_link_libraries(viterbi
   mlpack
 )
 
 add_executable(train
-  train.cc
+  train.cpp
 )
 target_link_libraries(train
   mlpack
