--- a/src/mlpack/methods/mog/CMakeLists.txt
+++ b/src/mlpack/methods/mog/CMakeLists.txt
@@ -3,18 +3,18 @@ cmake_minimum_required(VERSION 2.8)
 # Define the files we need to compile.
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
-  kmeans.h
-  kmeans.cc
+  kmeans.hpp
+  kmeans.cpp
   # for mog_em
-  mog_em.h
-  mog_em.cc
-  phi.h
+  mog_em.hpp
+  mog_em.cpp
+  phi.hpp
   # for mog_l2e
-  mog_l2e.h
-  mog_l2e.cc
+  mog_l2e.hpp
+  mog_l2e.cpp
   # optimizers
-  optimizers.h
-  optimizers.cc
+  optimizers.hpp
+  optimizers.cpp
 )
 
 # Add directory name to sources.
@@ -28,7 +28,7 @@ set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 # main executable, em
 add_executable(mog_em
-  mog_em_main.cc
+  mog_em_main.cpp
 )
 # link dependencies of mog_em
 target_link_libraries(mog_em
@@ -37,7 +37,7 @@ target_link_libraries(mog_em
 
 # main executable, l2e
 add_executable(mog_l2e
-  mog_l2e_main.cc
+  mog_l2e_main.cpp
 )
 target_link_libraries(mog_l2e
   mlpack
