Split timer functionality from CLI to Timers.

--- a/src/mlpack/core/utilities/CMakeLists.txt
+++ b/src/mlpack/core/utilities/CMakeLists.txt
@@ -7,6 +7,8 @@ set(SOURCES
     save_restore_utility.hpp
     save_restore_utility.hpp
     save_restore_utility.cpp
+    timers.hpp
+    timers.cpp
 )
 
 # add directory name to sources
