wrote emst_tests, fixed a few problems created by blindly replacing index_t with size_t

--- a/src/mlpack/methods/emst/CMakeLists.txt
+++ b/src/mlpack/methods/emst/CMakeLists.txt
@@ -33,3 +33,11 @@ target_link_libraries(union_find_test
   mlpack
   boost_unit_test_framework
 )
+
+add_executable(emst_test
+  emst_test.cc
+)
+target_link_libraries(emst_test
+  mlpack
+  boost_unit_test_framework
+)
