--- a/src/contrib/nslagle/CMakeLists.txt
+++ b/src/contrib/nslagle/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 # we just want to recurse into the child directories here
 set(DIRS
    myKDE
-   kdeDL
-   nested_summation_template
-   proximity_project
+   #kdeDL
+   #nested_summation_template
+   #proximity_project
 )
 
 foreach(dir ${DIRS})
