Update mog functions, eventually to be renamed GMMs.  Work in progress -- not yet complete.

--- a/src/mlpack/methods/CMakeLists.txt
+++ b/src/mlpack/methods/CMakeLists.txt
@@ -8,7 +8,7 @@ set(DIRS
   infomax_ica
   # kernel_pca # (required sparse and is known to not work or compile)
   linear_regression
-  mog
+  #mog (in progress)
   #mvu  # (currently known to not work)
   naive_bayes
   nca
