Cleaned up and moved all stray tests and test data that is included in the general mlpack_test.

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(mlpack_test
   nnsvm_test.cpp
   ridge_regression_test.cc
   save_restore_utility_test.cpp
+  sort_policy_test.cc
   svm_test.cc
   tree_test.cpp
   union_find_test.cpp
