Update all tests to new formatting standards and make them all .cpp not .cc.

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -12,23 +12,24 @@ set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 # test executable
 add_executable(mlpack_test
   mlpack_test.cpp
-  allkfn_test.cc
-  allknn_test.cc
+  allkfn_test.cpp
+  allknn_test.cpp
   cli_test.cpp
-  emst_test.cc
-  infomax_ica_test.cc
-  kernel_test.cc
+  emst_test.cpp
+#  hmm_test.cpp
+  infomax_ica_test.cpp
+  kernel_test.cpp
   lin_alg_test.cpp
   linear_regression_test.cpp
   load_save_test.cpp
   math_test.cpp
-  nbc_test.cc
-  nca_test.cc
+  nbc_test.cpp
+  nca_test.cpp
   nnsvm_test.cpp
-  ridge_regression_test.cc
+  ridge_regression_test.cpp
   save_restore_utility_test.cpp
-  sort_policy_test.cc
-  svm_test.cc
+  sort_policy_test.cpp
+  svm_test.cpp
   tree_test.cpp
   union_find_test.cpp
 )
