Flesh out DiscreteDistribution class entirely.  Inline functions in class definition.

--- a/src/mlpack/methods/hmm/CMakeLists.txt
+++ b/src/mlpack/methods/hmm/CMakeLists.txt
@@ -16,7 +16,7 @@ set(SOURCES
   hmm.hpp
   hmm_impl.hpp
   distributions/discrete_distribution.hpp
-  distributions/discrete_distribution_impl.hpp
+  distributions/discrete_distribution.cpp
 )
 
 # Add directory name to sources.
