--- a/src/mlpack/methods/gmm/CMakeLists.txt
+++ b/src/mlpack/methods/gmm/CMakeLists.txt
@@ -5,16 +5,9 @@ cmake_minimum_required(VERSION 2.8)
 set(SOURCES
   kmeans.hpp
   kmeans.cpp
-  # for mog_em
-  mog_em.hpp
-  mog_em.cpp
+  gmm.hpp
+  gmm.cpp
   phi.hpp
-  # for mog_l2e
-  mog_l2e.hpp
-  mog_l2e.cpp
-  # optimizers
-  optimizers.hpp
-  optimizers.cpp
 )
 
 # Add directory name to sources.
@@ -27,27 +20,10 @@ endforeach()
 set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 # main executable, em
-add_executable(mog_em
-  mog_em_main.cpp
+add_executable(gmm
+  gmm_main.cpp
 )
 # link dependencies of mog_em
-target_link_libraries(mog_em
+target_link_libraries(gmm
   mlpack
-)
-
-# main executable, l2e
-add_executable(mog_l2e
-  mog_l2e_main.cpp
-)
-target_link_libraries(mog_l2e
-  mlpack
-)
-
-# Test executable.
-add_executable(gmm_test
-  gmm_test.cpp
-)
-target_link_libraries(gmm_test
-  mlpack
-  boost_unit_test_framework
 )
