Checkin mid-progress.  Arbitrary data types added, need to clean up NearestNeighbors since it makes a few (too many) assumptions about the matrix it'll be using.

--- a/src/mlpack/core/tree/CMakeLists.txt
+++ b/src/mlpack/core/tree/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required(VERSION 2.8)
 set(SOURCES
   binary_space_tree.hpp
   binary_space_tree_impl.hpp
+  binary_space_tree_crtp.hpp
+  binary_space_tree_impl_crtp.hpp
   bounds.hpp
   dballbound.hpp
   dballbound_impl.hpp
