--- a/src/mlpack/methods/CMakeLists.txt
+++ b/src/mlpack/methods/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 set(DIRS
   emst
   fastica
-  #gmm
+  gmm
   hmm
   infomax_ica
   # kernel_pca # (required sparse and is known to not work or compile)
