Add Estimate(const arma::mat&, const arma::vec&) so that this class can work as a distribution for HMMs.

--- a/src/mlpack/methods/gmm/CMakeLists.txt
+++ b/src/mlpack/methods/gmm/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
   gmm.hpp
+  gmm_impl.hpp
   gmm.cpp
   phi.hpp
 )
