--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(mlpack_test
   hmm_test.cpp
   kernel_test.cpp
   kmeans_test.cpp
+  lars_test.cpp
   lin_alg_test.cpp
   linear_regression_test.cpp
   load_save_test.cpp
