--- a/src/mlpack/methods/lars/CMakeLists.txt
+++ b/src/mlpack/methods/lars/CMakeLists.txt
@@ -2,12 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 
 # Define the files we need to compile
 # Anything not in this list will not be compiled into the output library
-# Do not include test programs here
-# In this library, these are specified twice, once here, and once for the individual library it belongs to, so make sure
-# that you have files in both sections
 set(SOURCES
    lars.hpp
-   lars_impl.hpp
+   lars.cpp
 )
 
 # add directory name to sources
@@ -16,9 +13,8 @@ foreach(file ${SOURCES})
   set(DIR_SRCS ${DIR_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
 endforeach()
 # append sources (with directory name) to list of all MLPACK sources (used at the parent scope)
-set(MLPACK_CONTRIB_SRCS ${MLPACK_CONTRIB_SRCS} ${DIR_SRCS} PARENT_SCOPE)
+set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
-# The executable for LARS
 add_executable(lars
   lars_main.cpp
 )
