--- a/src/mlpack/methods/kpca/CMakeLists.txt
+++ b/src/mlpack/methods/kpca/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
   kpca.hpp
-  kpca.cpp
+  kpca_impl.hpp
 )
 
 # Add directory name to sources.
