Allow sparse vectors to be passed to metrics (this should get a bit of speedup). Now we leave the computation up to Armadillo.

--- a/src/mlpack/core/metrics/CMakeLists.txt
+++ b/src/mlpack/core/metrics/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
   lmetric.hpp
-  lmetric.cpp
+  lmetric_impl.hpp
   mahalanobis_distance.hpp
   mahalanobis_distance_impl.hpp
 )
