Abstract-ize NBC to allow sparse matrices.

--- a/src/mlpack/methods/naive_bayes/CMakeLists.txt
+++ b/src/mlpack/methods/naive_bayes/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 2.8)
 # Define the files we need to compile.
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
-  simple_nbc.hpp
-  simple_nbc.cpp
+  naive_bayes_classifier.hpp
+  naive_bayes_classifier_impl.hpp
 )
 
 # Add directory name to sources.
