Clean up CLI output again and again.  Then change how Timers works because it was being destructed before CLI in some cases.  That's the danger of singletons...

--- a/src/mlpack/core/io/CMakeLists.txt
+++ b/src/mlpack/core/io/CMakeLists.txt
@@ -17,6 +17,8 @@ set(SOURCES
   prefixedoutstream.hpp
   prefixedoutstream.cpp
   prefixedoutstream_impl.hpp
+  timers.hpp
+  timers.cpp
 )
 
 # add directory name to sources
