Compile libmlpack.so not libmlpack.a.

--- a/src/mlpack/CMakeLists.txt
+++ b/src/mlpack/CMakeLists.txt
@@ -15,7 +15,7 @@ foreach(dir ${DIRS})
 endforeach()
 
 # MLPACK_SRCS is set in the subdirectories.
-add_library(mlpack ${MLPACK_SRCS})
+add_library(mlpack SHARED ${MLPACK_SRCS})
 target_link_libraries(mlpack
   armadillo
   lapack
