Move io/* to utilities/* then utilities to util (shorter, simpler name) and update all references thereto.

--- a/src/mlpack/core/CMakeLists.txt
+++ b/src/mlpack/core/CMakeLists.txt
@@ -2,13 +2,12 @@
 set(DIRS
   arma_extend
   data
-  io
   kernels
   math
   metrics
   optimizers
   tree
-  utilities
+  util
 )
 
 foreach(dir ${DIRS})
