Split math_misc.hpp as per #143.

--- a/src/mlpack/core/math/CMakeLists.txt
+++ b/src/mlpack/core/math/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 # Define the files we need to compile
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
+  clamp.hpp
   lin_alg.hpp
-  math_misc.hpp
+  random.hpp
   range.hpp
   range.cpp
 )
