Clean up MVU code and add a main executable to it.

--- a/src/mlpack/methods/CMakeLists.txt
+++ b/src/mlpack/methods/CMakeLists.txt
@@ -9,7 +9,7 @@ set(DIRS
   kmeans
   lars
   linear_regression
-  #mvu  # (currently known to not work)
+  mvu
   naive_bayes
   nca
   neighbor_search
