Smarter linking of MLPACK against Boost.

--- a/src/mlpack/CMakeLists.txt
+++ b/src/mlpack/CMakeLists.txt
@@ -20,8 +20,7 @@ target_link_libraries(mlpack
   armadillo
   lapack
   blas
-  boost_program_options
-  boost_random
+  ${BOOST_LIBS}
   xml2
 )
 set_target_properties(mlpack
