--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ mark_as_advanced(LIBXML2_INCLUDE_DIR LIBXML2_LIBRARY )
 set(Boost_ADDITIONAL_VERSIONS
   "1.41" "1.41.0" "1.42" "1.42.0" "1.43" "1.43.0"
   "1.44" "1.44.0" "1.45.0")
+set(BOOST_LIBS "boost_math_c99" "boost_program_options")
 find_package(Boost COMPONENTS
   math_c99
   program_options
@@ -54,6 +55,7 @@ if(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION GREATER 45)
   find_package(Boost COMPONENTS
   random
   REQUIRED)
+  set(BOOST_LIBS ${BOOST_LIBS} "boost_random")
 endif(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION GREATER 45)
 
 
