--- a/src/mlpack/core/kernels/CMakeLists.txt
+++ b/src/mlpack/core/kernels/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
   linear_kernel.hpp
   cosine_distance.hpp
   cosine_distance_impl.hpp
+  exponential_kernel.hpp
 )
 
 # add directory name to sources
