Add 'make test' command.  This should make the build fail if the test does not pass.  It is not run by default if you type 'make'; you have to type 'make test' to actually run the test.

--- a/src/mlpack/CMakeLists.txt
+++ b/src/mlpack/CMakeLists.txt
@@ -66,3 +66,10 @@ install(DIRECTORY ${CMAKE_BINARY_DIR}/bin/
   COMPONENT mlpack
   FILES_MATCHING
   PATTERN *[^_test])
+
+# For 'make test'.
+add_custom_target(test
+  ${CMAKE_BINARY_DIR}/bin/mlpack_test
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/ # This is where test files are put.
+  COMMENT "Running MLPACK test"
+  DEPENDS mlpack_test)
