Don't install Doxygen documentation if it was never built.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,5 +131,6 @@ if (DOXYGEN_FOUND)
   install(DIRECTORY ${CMAKE_BINARY_DIR}/doc/html
     DESTINATION share/doc/mlpack
     COMPONENT doc
+    OPTIONAL
   )
 endif (DOXYGEN_FOUND)
