Don't do extremely simple LRSDP test; it needs a different first Lagrange multiplier.  We'll work that out later.  Remove SDP tests from AugLagrangian tests.  Compile it all and add it to the usual tests.

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(mlpack_test
   mlpack_test.cpp
   allkfn_test.cpp
   allknn_test.cpp
+  aug_lagrangian_test.cpp
   cli_test.cpp
   distribution_test.cpp
   emst_test.cpp
@@ -17,6 +18,7 @@ add_executable(mlpack_test
   lin_alg_test.cpp
   linear_regression_test.cpp
   load_save_test.cpp
+  lrsdp_test.cpp
   math_test.cpp
   nbc_test.cpp
   nca_test.cpp
