MRKDStatistic for mrkd-trees. Probably still needs improvements.

--- a/src/mlpack/core/tree/CMakeLists.txt
+++ b/src/mlpack/core/tree/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
   periodichrectbound.hpp
   periodichrectbound_impl.hpp
   statistic.hpp
+  mrkd_statistic.hpp
 )
 
 # add directory name to sources
