--- a/src/mlpack/core/kernels/CMakeLists.txt
+++ b/src/mlpack/core/kernels/CMakeLists.txt
@@ -3,13 +3,14 @@ cmake_minimum_required(VERSION 2.8)
 # Define the files we need to compile.
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
-  gaussian_kernel.hpp
-  linear_kernel.hpp
   cosine_distance.hpp
   cosine_distance_impl.hpp
-  laplacian_kernel.hpp
-  polynomial_kernel.hpp
+  gaussian_kernel.hpp
   hyperbolic_tangent_kernel.hpp
+  laplacian_kernel.hpp
+  linear_kernel.hpp
+  polynomial_kernel.hpp
+  spherical_kernel.hpp
 )
 
 # add directory name to sources
